# cpp-windows-socket-client

./: README.md
Socket/: CMakeLists.txt
Socket/examples/: main.cpp
Socket/include/: socket.h
Socket/src/: socket.cpp
